--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
+
+
+#cursor-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    background-color: #cb5b05a2; 
+    border-radius: 50%;
+    pointer-events: none;
+    transition: width 0.2s, height 0.2s;
+}
 
 * {
     padding: 0;
@@ -16,8 +30,7 @@ header {
     align-items: center;
     z-index: 1000;
     width: 100%;
-    padding: 10px 150px;
-
+    padding: 10px 30px;
 }
 
 .logo {
@@ -26,6 +39,11 @@ header {
     font-size: 2em;
     font-weight: 800;
     text-transform: uppercase;
+}
+
+.navigation {
+    margin-left: auto; 
+    display: flex; 
 }
 
 .navigation a {
@@ -41,13 +59,14 @@ header {
     color: rgb(211, 173, 3);
 }
 
+
 .fb,
 .tw,
 .ig,
 .gh {
     font-size: 1.7em;
     padding-right: 30px;
-    color: #fafafa;
+    color: #983b3b;
 }
 
 .fb:hover {
@@ -80,7 +99,7 @@ section {
     background-size: cover;
     background-attachment: fixed;
 }
-
+zz
 .text {
     position: relative;
     overflow: hidden;
@@ -105,7 +124,7 @@ section {
   }
   
   .text h4 {
-      color: rgb(173, 173, 173);
+      color: #983b3b;
       animation-name: slideInRight;
       animation-delay: 1s;
   }
@@ -119,6 +138,7 @@ section {
       position: relative;
       animation-name: slideInRight;
       animation-delay: 2s;
+      font-family: "Tiny5", sans-serif;
   }
   
   .main h3 {
@@ -165,16 +185,16 @@ section {
     letter-spacing: 1px;
     border-radius: 15px;
     margin-bottom: 40px;
-    transition: 1s ease;
+    transition: 2s ease;
     position: relative;
     opacity: 0; 
-    transform: translateY(-50px); 
+    transform: translateY(-1000px); 
 }
 
 .main-btn.show {
     opacity: 1; 
     transform: translateY(0); 
-    transition: opacity 2s ease-out, transform 1s ease-out; 
+    transition: opacity 3s ease-out, transform 2s ease-out; 
 }
 
 .main-btn:hover {
@@ -199,7 +219,7 @@ section {
 }
 
 #about {
-    background-color: #6f644e; 
+    background-color: #1c1407; 
     color: #faf7f7; 
     padding: 32px; 
     text-align: center;
@@ -215,7 +235,7 @@ section {
     color: #ffffff;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 12px;
 }
 
 .about-content {
@@ -239,7 +259,7 @@ section {
     height: 100%;
     border-radius: 50%;
     border: 5px solid #ff99002b;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
     transition: transform 0.6s ease, box-shadow 0.3s ease;
 }
 
@@ -263,15 +283,15 @@ section {
     margin-left: 20px;
 }
 
-
-
 .skills{
     background-color: #474035;
 }
 
 .card {
-    background-color: #ffffff;
-    width: 20.20em;
+    background-image:url("../images/2eHi.gif");
+    background-position-y: -50px;
+    background-size: 340px;
+    width: 20em;
     box-shadow: 0 5px 25px rgba(1, 1, 1, 0.5);
     border-radius: 10px;
     padding: 20px;
@@ -423,7 +443,7 @@ section {
   }
   
   #contact .card {
-    background-color: #fff; 
+    background-image:url("../images/5YPk.gif");
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -578,7 +598,7 @@ section {
     }
 
     .navigation a {
-        padding: 10px;
+        padding-top: 10px;
         border-bottom: 1px solid #bbb5b192;
     }
 
@@ -586,3 +606,4 @@ section {
         display: block;
     }
 }
+
